--- a/plantes.html
+++ b/plantes.html
@@ -15,11 +15,10 @@
 			<nav>
 				<ul>
 					<li> <a href="index.html"> Accueil </a> </li>
-					<li> <a href="animaux.html"> animaux </a> </li>
-					<li> <a href="plantes.html"> plantes </a> </li>
-					<li> <a href="batiments.html"> bâtiments </a> </li>
-					<li> <a href="matériels.html"> engins </a> </li>
-					<li> <a href="outils.html"> outils </a> </li>
+					<li> <a href="animaux.html"> Animaux </a> </li>
+					<li> <a href="plantes.html"> Plantes </a> </li>
+					<li> <a href="batiments.html"> Bâtiments </a> </li>
+					<li> <a href="matériels.html"> Materiels </a> </li>
 				</ul>
 			</nav>
 		</header>
