--- a/plantes.html
+++ b/plantes.html
@@ -18,7 +18,7 @@
 					<li> <a href="plantes.html"> Plantes </a> </li>
 					<li> <a href="animaux.html"> Animaux </a> </li>
 					<li> <a href="batiments.html"> Bâtiments </a> </li>
-					<li> <a href="materiels.html"> Materiels </a> </li>
+					<li> <a href="materiels.html"> Matériels </a> </li>
 				</ul>
 			</nav>
 		</header>
