--- a/plantes.html
+++ b/plantes.html
@@ -34,6 +34,10 @@
 					<p>
 				 		Les graines de blé prennent 1 minute pour pousser, et donnent entre 1 et 4 blé lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 4 graines de blé.
 					</p>
+					<figure>
+					<img src="images/ble.png" alt="image de ble"/>
+					<figcaption>Une vache</figcaption>
+					</figure>
 				</article>
 				<article>
 				<h3>Les carottes</h3>
