--- a/plantes.html
+++ b/plantes.html
@@ -36,7 +36,7 @@
 					</p>
 					<figure>
 					<img src="images/ble.png" alt="image de ble"/>
-					<figcaption>Une vache</figcaption>
+					<figcaption>Du blé</figcaption>
 					</figure>
 				</article>
 				<article>
