--- a/plantes.html
+++ b/plantes.html
@@ -44,6 +44,10 @@
 					<p>
 				 		Les carottes prennent 5 minutes pour pousser, et donnent entre 1 et 4 carottes lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de carottes.
 					</p>
+					<figure>
+					<img src="images/carotte.png" alt="image d'une carotte"/>
+					<figcaption>Une carotte</figcaption>
+					</figure>
 				</article>
 				<article>
 				<h3>Les pommes de terres</h3>
