--- a/plantes.html
+++ b/plantes.html
@@ -54,6 +54,10 @@
 					<p>
 				 		Les pommes de terres prennent 20 minutes pour pousser, et donnent entre 2 et 3 pommes de terres lors de la récolte. Nous sommes également garantis de récupérer 2 graines de pommes de terres.
 					</p>
+					<figure>
+					<img src="images/patate.png" alt="image d'une patate"/>
+					<figcaption>Une patate</figcaption>
+					</figure>
 				</article>
 				<article>
 				<h3>Les aubergines</h3>
