--- a/plantes.html
+++ b/plantes.html
@@ -45,7 +45,7 @@
 				 		Les carottes prennent 5 minutes pour pousser, et donnent entre 1 et 4 carottes lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de carottes.
 					</p>
 					<figure>
-					<img src="images/carotte.png" alt="image d'une carotte"/>
+					<img src="images/carotte.webp" alt="image d'une carotte"/>
 					<figcaption>Une carotte</figcaption>
 					</figure>
 				</article>
@@ -55,7 +55,7 @@
 				 		Les pommes de terres prennent 20 minutes pour pousser, et donnent entre 2 et 3 pommes de terres lors de la récolte. Nous sommes également garantis de récupérer 2 graines de pommes de terres.
 					</p>
 					<figure>
-					<img src="images/patate.png" alt="image d'une patate"/>
+					<img src="images/patate.webp" alt="image d'une patate"/>
 					<figcaption>Une patate</figcaption>
 					</figure>
 				</article>
