--- a/animaux.html
+++ b/animaux.html
@@ -36,7 +36,7 @@
 						La vache est un animal commun. Le joueur pourra récolter du lait depuis les vaches. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de bœuf et du cuir. 			
 					</p>
 					<figure>
-					<img src="images/vache.jpg" alt="image d'une vache"/>
+					<img src="images/vache.png" alt="image d'une vache"/>
 					<figcaption>Une vache</figcaption>
 					</figure>
 				</article>
@@ -46,7 +46,7 @@
 						Le cochon est un animal commun. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de porc. 			
 					</p>
 					<figure>
-					<img src="images/cochon.jpg" alt="image d'un cochon"/>
+					<img src="images/cochon.png" alt="image d'un cochon"/>
 					<figcaption>Un cochon</figcaption>
 					</figure>
 				</article>
@@ -56,7 +56,7 @@
 						La poule est un animal commun. Le joueur pourra récolter des œufs depuis les poules. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir du poulet. 			
 					</p>
 					<figure>
-					<img src="images/poule.jpg" alt="image d'une poule"/>
+					<img src="images/poule.png" alt="image d'une poule"/>
 					<figcaption>Une poule</figcaption>
 					</figure>
 				</article>
@@ -66,7 +66,7 @@
 						Le mouton est un animal commun. Le joueur pourra récolter de la laine depuis les moutons. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de mouton. 			
 					</p>
 					<figure>
-					<img src="images/mouton.webp" alt="image d'un mouton"/>
+					<img src="images/mouton.png" alt="image d'un mouton"/>
 					<figcaption>Un mouton</figcaption>
 					</figure>
 				</article>
@@ -79,7 +79,7 @@
 						La chèvre est un animal rare. Le joueur pourra récolter du lait depuis les chèvres. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande et des cornes. 			
 					</p>
 					<figure>
-					<img src="images/chevre.webp" alt="image d'une chèvre"/>
+					<img src="images/chevre.png" alt="image d'une chèvre"/>
 					<figcaption>Une chèvre</figcaption>
 					</figure>
 				</article>
@@ -89,7 +89,7 @@
 						Le canard est un animal rare. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de canard. 			
 					</p>
 					<figure>
-					<img src="images/canard.webp" alt="image d'un canard"/>
+					<img src="images/canard.png" alt="image d'un canard"/>
 					<figcaption>Un canard</figcaption>
 					</figure>
 				</article>
@@ -99,7 +99,7 @@
 						Le Lapin est un animal rare. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande. Les lapins pourront également être revendus vivants. 			
 					</p>
 					<figure>
-					<img src="images/lapin.webp" alt="image d'un lapin"/>
+					<img src="images/lapin.png" alt="image d'un lapin"/>
 					<figcaption>Un lapin</figcaption>
 					</figure>
 				</article>
@@ -112,7 +112,7 @@
 						La chèvre est un animal épique. Le joueur pourra récolter des œufs depuis les autruches.	
 					</p>
 					<figure>
-					<img src="images/autruche.webp" alt="image d'une autruche"/>
+					<img src="images/autruche.png" alt="image d'une autruche"/>
 					<figcaption>Une autruche</figcaption>
 					</figure>
 				</article>
@@ -122,7 +122,7 @@
 						Le crocodile est un animal épique. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande et des écailles. 			
 					</p>
 					<figure>
-					<img src="images/crocodile.webp" alt="image d'un crocodile"/>
+					<img src="images/crocodile.png" alt="image d'un crocodile"/>
 					<figcaption>Un crocodile</figcaption>
 					</figure>
 				</article>
