--- a/materiels.html
+++ b/materiels.html
@@ -38,8 +38,8 @@
 						<th>Image</th><th>Engin</th><th><Utilisé</th>
 					</thead>
 					<tbody>
-						<tr><td><img src="images/tracteur.jpg" alt="image d'un tracteur"/></td><td>Tracteur</td><td>Permet de planer des graines et labourer plus rapidement. Utilisable uniquement par les employés.</td></tr>
-						<tr><td><img src="images/moissonneuse.jpg" alt="image d'une moissonneuse-bateuse"/></td><td>Moissonneuse-batteuse</td><td>Permet de récolter les plantes plus rapidement. Utilisable uniquement par les employés.</td></tr>
+						<tr><td><img src="images/tracteur.png" alt="image d'un tracteur"/></td><td>Tracteur</td><td>Permet de planer des graines et labourer plus rapidement. Utilisable uniquement par les employés.</td></tr>
+						<tr><td><img src="images/moissonneuse.png" alt="image d'une moissonneuse-bateuse"/></td><td>Moissonneuse-batteuse</td><td>Permet de récolter les plantes plus rapidement. Utilisable uniquement par les employés.</td></tr>
 					</tbody>
 				</table>			
 			</section>
