--- a/plantes.html
+++ b/plantes.html
@@ -73,18 +73,30 @@
 					<p>
 				 		Les graines de bettraves prennent 45 minutes pour pousser, et donnent entre 1 et 4 bettraves lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de bettraves.
 					</p>
+					<figure>
+					<img src="images/bettrave.png" alt="image d'une bettrave"/>
+					<figcaption>Une bettrave</figcaption>
+					</figure>
 				</article>
 				<article>
 				<h3>Le maïs</h3>
 					<p>
 				 		Le maïs prend 5 heures pour pousser, et donne entre 10 et 20 maïs lors de la récolte. Nous sommes également garantis de récupérer entre 0 et 10 graines de maïs.
 					</p>
+					<figure>
+					<img src="images/mais.png" alt="image de maïs"/>
+					<figcaption>Du maïs</figcaption>
+					</figure>
 				</article>
 				<article>
 				<h3>La salade</h3>
 					<p>
 				 		La salade prend 12 heures pour pousser, et donne entre 1 et 2 salades lors de la récolte. Nous sommes également garantis de récupérer 2 graines de salades.
 					</p>
+					<figure>
+					<img src="images/salade.png" alt="image d'une salade"/>
+					<figcaption>Une salade</figcaption>
+					</figure>
 				</article>
 			</section>
 			<section>
@@ -94,12 +106,20 @@
 					<p>
 				 		Les graines de tomates prennent 1 heures pour pousser, et donnent entre 4 et 6 tomates lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de tomates.
 					</p>
+					<figure>
+					<img src="images/tomate.png" alt="image d'une tomate"/>
+					<figcaption>Une tomate</figcaption>
+					</figure>
 				</article>
 				<article>
 				<h3>Les choux</h3>
 					<p>
 				 		Les choux prennent 72 heures pour pousser, et donnent 1 choux lors de la récolte. Nous sommes également garantis de récupérer entre 1 graine de choux.
 					</p>
+					<figure>
+					<img src="images/chou.png" alt="image d'un chou"/>
+					<figcaption>Un chou</figcaption>
+					</figure>
 				</article>
 				<article>
 			</section>
@@ -110,6 +130,10 @@
 					<p>
 				 		Les graines de rutabagas prennent 24 heures pour pousser, et donnent 1 rutabaga lors de la récolte. Nous sommes également garantis de récupérer 1 graine de rutabaga.
 					</p>
+					<figure>
+					<img src="images/rutabaga.png" alt="image d'un rutabaga"/>
+					<figcaption>Un rutabaga</figcaption>
+					</figure>
 				</article>
 				<article>
 			</section>
