--- a/plantes.html
+++ b/plantes.html
@@ -69,13 +69,13 @@
 			<section>
 				<h2> Les graines rares </h2>
 				<article>
-					<h3>Les bettraves</h3>
+					<h3>Les betteraves</h3>
 					<p>
-				 		Les graines de bettraves prennent 45 minutes pour pousser, et donnent entre 1 et 4 bettraves lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de bettraves.
+				 		Les graines de betteraves prennent 45 minutes pour pousser, et donnent entre 1 et 4 betteraves lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de betteraves.
 					</p>
 					<figure>
-					<img src="images/bettrave.png" alt="image d'une bettrave"/>
-					<figcaption>Une bettrave</figcaption>
+					<img src="images/betterave.png" alt="image d'une betterave"/>
+					<figcaption>Une betterave</figcaption>
 					</figure>
 				</article>
 				<article>
