--- a/plantes.html
+++ b/plantes.html
@@ -64,6 +64,10 @@
 					<p>
 				 		Les aubergines prennent 2 heures pour pousser, et donnent entre 1 et 2 aubergines lors de la récolte. Nous sommes également garantis de récupérer 2 graines d'aubergines.
 					</p>
+					<figure>
+					<img src="images/aubergine.png" alt="image d'une aubergine"/>
+					<figcaption>Une aubergine</figcaption>
+					</figure>
 				</article>
 			</section>
 			<section>
