--- a/animaux.html
+++ b/animaux.html
@@ -10,6 +10,7 @@
 	
 	<body>
 		<header>
+			<img src="images/logo.png" alt="logo du jeu agricole" />
 			<nav>
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
