--- a/materiels.html
+++ b/materiels.html
@@ -11,6 +11,7 @@
 	<body>
 		<header>
 			<nav>
+				<img src="images/logo.png" alt="logo du jeu agricole" />
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="plantes.html">Plantes</a></li>
