--- a/animaux.html
+++ b/animaux.html
@@ -12,7 +12,9 @@
 		<header>
 			
 			<nav>
+				< a href="index.html" >
 				<img src="images/logo.png" alt="logo du jeu agricole" />
+				</a>
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="plantes.html">Plantes</a></li>
