--- a/materiels.html
+++ b/materiels.html
@@ -11,7 +11,9 @@
 	<body>
 		<header>
 			<nav>
+				<a href="index.html">
 				<img src="images/logo.png" alt="logo du jeu agricole" />
+				</a>
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="plantes.html">Plantes</a></li>
