--- a/plantes.html
+++ b/plantes.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>
-			Les différents types de plantes du jeu Agricole
-		</title>
+		<title>Agricole</title>
 		<meta charset="utf-8"/>
 		<meta name="author" content="leandre leclerc" />
 		<meta name="description" content="Informations sur les différents types de plantes du jeu Agricole"/>
