--- a/animaux.html
+++ b/animaux.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>
-			
-		</title>
+		<title>Agricole</title>
 		<link rel="stylesheet" href="styles.css"/>
 		<link rel="icon" href="images/logo.png"/>
 	</head>
