--- a/materiels.html
+++ b/materiels.html
@@ -36,9 +36,11 @@
 				</p>
 				<table>
 					<thead>
-						<th>Image</th>
-						<th>Engin</th>
-						<th>Utilisé</th>
+						<tr>
+							<th>Image</th>
+							<th>Engin</th>
+							<th>Utilisé</th>
+						</tr>
 					</thead>
 					<tbody>
 						<tr><td><img src="images/tracteur.png" alt="image d'un tracteur"/></td><td>Tracteur</td><td>Permet de planer des graines et labourer plus rapidement. Utilisable uniquement par les employés.</td></tr>
@@ -50,16 +52,36 @@
 				<h2>Les outils</h2>
 				<table>
 					<thead>
-						<th>Engin</th>
-						<th>Utilisé</th>
+						<tr>
+							<th>Engin</th>
+							<th>Utilisé</th>
+						</tr>
 					</thead>
 					<tbody>
-						<tr><td>Faucille</td><td>Permet de récolter des plantes</td></tr>
-						<tr><td>Houe</td><td>Permet de labourer le sol et plantes les graines</td></tr>
-						<tr><td>Arroseur</td><td>Permet aux plantes de pousser plus rapidement et évite les sécheresses.</td></tr>
-						<tr><td>Engrais</td><td>Apporte des nutriments au sol qui sont essentiels à la pousse des plantes</td></tr>
-						<tr><td>Couveuse</td><td>Augmente la rapidité d'éclosion des œufs</td></tr>
-						<tr><td>Serre</td><td>Protège du froid et des intempéries</td></tr>
+						<tr>
+							<td>Faucille</td>
+							<td>Permet de récolter des plantes</td>
+						</tr>
+						<tr>
+							<td>Houe</td>
+							<td>Permet de labourer le sol et plantes les graines</td>
+						</tr>
+						<tr>
+							<td>Arroseur</td>
+							<td>Permet aux plantes de pousser plus rapidement et évite les sécheresses.</td>
+						</tr>
+						<tr>
+							<td>Engrais</td>
+							<td>Apporte des nutriments au sol qui sont essentiels à la pousse des plantes</td>
+						</tr>
+						<tr>
+							<td>Couveuse</td>
+							<td>Augmente la rapidité d'éclosion des œufs</td>
+						</tr>
+						<tr>
+							<td>Serre</td>
+							<td>Protège du froid et des intempéries</td>
+						</tr>
 					</tbody>
 				</table>		
 			</section>
