--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					<li> <a href="animaux.html" > Animaux </a> </li>
 					<li> <a href="batiments.html" > Bâtiments </a> </li>
 					<li> <a href="materiels.html" > Matériels </a> </li>
+					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
 			<h1> Agriole </h1>
