--- a/materiels.html
+++ b/materiels.html
@@ -18,6 +18,7 @@
 					<li><a href="animaux.html">Animaux</a></li>
 					<li><a href="batiments.html">Bâtiments</a></li>
 					<li><a href="materiels.html">Matériels</a></li>
+					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
 		</header>
