--- a/aleas.html
+++ b/aleas.html
@@ -68,6 +68,7 @@
 				<h3>L'extraterrestre</h3>
 					<p>
 				 		L'extraterrestre à une chance infime d'apparaitre. Si jamais il survol l'un de vos enclos, il enlèvera une vache et vous la redonnera quelques jours plus tard. Cependant la vache aura subis quelques modifications, notamment, elle aura une quantitée de lait infini permettant de traire en boucle cette vache.
+				</article>
 			</section>
 		</main>
 		<footer>
