--- a/aleas.html
+++ b/aleas.html
@@ -4,7 +4,9 @@
 	<head>
 		<title>Agricole</title>
 		<meta charset="utf-8"/>
-		<meta name="author" content="leandre leclerc" />
+		<meta name="author" content="Léandre Leclerc" />
+		<meta name="author" content="Pablo Rebufie" />
+		<meta name="author" content="Ian Le Roux" />
 		<meta name="description" content="Informations sur les différents types d'aléas de Fertilia"/>
 		<meta name="keywords" content="Agricole, Graines, Plantes"/>
 	</head>
