--- a/animaux.html
+++ b/animaux.html
@@ -4,6 +4,12 @@
 		<title>Agricole</title>
 		<link rel="stylesheet" href="styles.css"/>
 		<link rel="icon" href="images/logo.png"/>
+		<meta charset="utf-8"/>
+		<meta name="author" content="Léandre Leclerc" />
+		<meta name="author" content="Pablo Rebufie" />
+		<meta name="author" content="Ian Le Roux" />
+		<meta name="description" content="Informations sur les différents types d'aléas de Fertilia"/>
+		<meta name="keywords" content="Agricole, Graines, Plantes"/>
 	</head>
 	
 	<body>
