--- a/animaux.html
+++ b/animaux.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Léandre Leclerc" />
 		<meta name="author" content="Pablo Rebufie" />
 		<meta name="author" content="Ian Le Roux" />
-		<meta name="description" content="Informations sur les différents types d'aléas de Fertilia"/>
+		<meta name="description" content="Informations sur les différents types d'animaux de Fertilia"/>
 		<meta name="keywords" content="Agricole, Graines, Plantes"/>
 	</head>
 	
@@ -17,7 +17,7 @@
 			
 			<nav>
 				<a href="index.html">
-				<img src="images/logo.png" alt="logo du jeu agricole" />
+				<img src="images/logo.png" alt="logo de Fertilia" />
 				</a>
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
