--- a/batiments.html
+++ b/batiments.html
@@ -5,8 +5,10 @@
 	
 		<title>Agricole</title>
 		<meta charset = "utf-8"/>
-		<meta name="author" content="prebu" />
-		<meta name = "description" content = "Accueil du site de présentation du jeu"/>
+		<meta name="author" content="Léandre Leclerc" />
+		<meta name="author" content="Pablo Rebufie" />
+		<meta name="author" content="Ian Le Roux" />
+		<meta name = "description" content = "Accueil du site de présentation de Fertilia"/>
 		<meta name = "keywords" content = "Agricole, Jeux"/>
 		<link rel="icon" href="images/jam.png" />
 		<link rel="stylesheet" href="styles.css"/>		
@@ -17,7 +19,7 @@
 	<header>
 		<nav>
 				<a href="index.html">
-				<img src="images/logo.png" alt="logo du jeu agricole" />
+				<img src="images/logo.png" alt="logo de Fertilia" />
 				</a>
 				<ul>
 					<li> <a href="index.html" > Accueil </a> </li>
