--- a/materiels.html
+++ b/materiels.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Agricole</title>
+		<title>Fertilia</title>
+		<meta charset="utf-8"/>
+		<meta name="author" content="Léandre Leclerc" />
+		<meta name="author" content="Pablo Rebufie" />
+		<meta name="author" content="Ian Le Roux" />
+		<meta name="description" content="Informations sur le matériel de Fertilia"/>
+		<meta name="keywords" content="Agricole, Graines, Plantes"/>
 		<link rel="stylesheet" href="styles.css"/>
 		<link rel="icon" href="images/logo.png"/>
 	</head>
@@ -10,7 +16,7 @@
 		<header>
 			<nav>
 				<a href="index.html">
-				<img src="images/logo.png" alt="logo du jeu agricole" />
+				<img src="images/logo.png" alt="logo de Fertilia" />
 				</a>
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
