--- a/plantes.html
+++ b/plantes.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Agricole</title>
+		<title>Fertilia</title>
 		<meta charset="utf-8"/>
 		<meta name="author" content="leandre leclerc" />
-		<meta name="description" content="Informations sur les différents types de plantes du jeu Agricole"/>
+		<meta name="author" content="Pablo Rebufie" />
+		<meta name="author" content="Ian Le Roux" />
+		<meta name="description" content="Informations sur les différents types de plantes de Fertilia"/>
 		<meta name="keywords" content="Agricole, Graines, Plantes"/>
 	</head>
 	
@@ -12,7 +14,7 @@
 		<header>
 			<nav>
 				<a href="index.html">
-				<img src="images/logo.png" alt="logo du jeu agricole" />
+				<img src="images/logo.png" alt="logo de Fertilia" />
 				</a>
 				<ul>
 					<li> <a href="index.html"> Accueil </a> </li>
