--- a/aleas.html
+++ b/aleas.html
@@ -2,20 +2,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Agricole</title>
+		<title>Fertilia</title>
 		<meta charset="utf-8"/>
 		<meta name="author" content="Léandre Leclerc" />
 		<meta name="author" content="Pablo Rebufie" />
 		<meta name="author" content="Ian Le Roux" />
 		<meta name="description" content="Informations sur les différents types d'aléas de Fertilia"/>
-		<meta name="keywords" content="Agricole, Graines, Plantes"/>
+		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 	</head>
 	
 	<body>
 		<header>
 			<nav>
 				<a href="index.html">
-				<img src="images/logo.png" alt="logo du jeu agricole" />
+				<img src="images/logo.png" alt="logo de Fertilia" />
 				</a>
 				<ul>
 					<li> <a href="index.html"> Accueil </a> </li>
