--- a/animaux.html
+++ b/animaux.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Agricole</title>
+		<title>Fertilia</title>
 		<meta charset="utf-8"/>
 		<meta name="author" content="Léandre Leclerc" />
 		<meta name="author" content="Pablo Rebufie" />
 		<meta name="author" content="Ian Le Roux" />
 		<meta name="description" content="Informations sur les différents types d'animaux de Fertilia"/>
-		<meta name="keywords" content="Agricole, Graines, Plantes"/>
+		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 		<link rel="stylesheet" href="styles.css"/>
 		<link rel="icon" href="images/logo.png"/>
 
