--- a/aleas.html
+++ b/aleas.html
@@ -9,6 +9,8 @@
 		<meta name="author" content="Ian Le Roux" />
 		<meta name="description" content="Informations sur les différents types d'aléas de Fertilia"/>
 		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
+		<link rel="stylesheet" href="styles.css"/>
+		<link rel="icon" href="images/logo.png"/>
 	</head>
 	
 	<body>
