--- a/batiments.html
+++ b/batiments.html
@@ -3,14 +3,14 @@
 
 	<head>
 	
-		<title>Agricole</title>
+		<title>Fertilia</title>
 		<meta charset = "utf-8"/>
 		<meta name="author" content="Léandre Leclerc" />
 		<meta name="author" content="Pablo Rebufie" />
 		<meta name="author" content="Ian Le Roux" />
 		<meta name = "description" content = "Accueil du site de présentation de Fertilia"/>
-		<meta name = "keywords" content = "Agricole, Jeux"/>
-		<link rel="icon" href="images/jam.png" />
+		<meta name = "keywords" content = "Fertilia, Jeux"/>
+		<link rel="icon" href="images/logo.png" />
 		<link rel="stylesheet" href="styles.css"/>		
 		
 	</head>
