--- a/materiels.html
+++ b/materiels.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Pablo Rebufie" />
 		<meta name="author" content="Ian Le Roux" />
 		<meta name="description" content="Informations sur le matériel de Fertilia"/>
-		<meta name="keywords" content="Agricole, Graines, Plantes"/>
+		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 		<link rel="stylesheet" href="styles.css"/>
 		<link rel="icon" href="images/logo.png"/>
 	</head>
