--- a/plantes.html
+++ b/plantes.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Pablo Rebufie" />
 		<meta name="author" content="Ian Le Roux" />
 		<meta name="description" content="Informations sur les différents types de plantes de Fertilia"/>
-		<meta name="keywords" content="Agricole, Graines, Plantes"/>
+		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 	</head>
 	
 	<body>
