--- a/plantes.html
+++ b/plantes.html
@@ -8,6 +8,8 @@
 		<meta name="author" content="Ian Le Roux" />
 		<meta name="description" content="Informations sur les différents types de plantes de Fertilia"/>
 		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
+		<link rel="stylesheet" href="styles.css"/>
+		<link rel="icon" href="images/logo.png"/>
 	</head>
 	
 	<body>
