--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
-			<h1> Agriole </h1>
+			<h1> Fertilia </h1>
 		</header>
 		<main>
 			<section>
