--- a/aleas.html
+++ b/aleas.html
@@ -27,12 +27,10 @@
 					<li> <a href="materiels.html"> Matériels </a> </li>
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>
+				<h1>LES DIFFÉRENTS TYPE D'ALÉAS</h1>
 			</nav>
 		</header>
 		<main>
-			<h1>
-				LES DIFFÉRENTS TYPE D'ALÉAS
-			</h1>
 			<p> Dans Fertilia, différents aléas souvent négatifs vont survenir de manière aléatoire dans la partie. Voici la liste des différentes catastrophes et aubaines et comment les éviter</p>
 			<section>
 				<h2> Les catastrophes </h2>
