--- a/plantes.html
+++ b/plantes.html
@@ -26,12 +26,10 @@
 					<li> <a href="materiels.html"> Matériels </a> </li>
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>
+				<h1>LES PLANTES</h1>
 			</nav>
 		</header>
 		<main>
-			<h1>
-				LES PLANTES
-			</h1>
 			<p> Les plantes sont les ressources principales du jeu. Chaque plante a des attributs spécifiques. Ils sont définis par le temps de pousse, les besoins en nutriments, l'apport nutritif et le prix de vente </p>
 			<section>
 				<h2> Les graines communes </h2>
