--- a/aleas.html
+++ b/aleas.html
@@ -4,9 +4,9 @@
 	<head>
 		<title>Fertilia</title>
 		<meta charset="utf-8"/>
-		<meta name="author" content="Léandre Leclerc" />
-		<meta name="author" content="Pablo Rebufie" />
-		<meta name="author" content="Ian Le Roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
 		<meta name="description" content="Informations sur les différents types d'aléas de Fertilia"/>
 		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 		<link rel="stylesheet" href="styles.css"/>
@@ -27,8 +27,8 @@
 					<li> <a href="materiels.html"> Matériels </a> </li>
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>
-				<h1>LES DIFFÉRENTS TYPE D'ALÉAS</h1>
 			</nav>
+			<h1>Les différents types d'aléas</h1>
 		</header>
 		<main>
 			<p> Dans Fertilia, différents aléas souvent négatifs vont survenir de manière aléatoire dans la partie. Voici la liste des différentes catastrophes et aubaines et comment les éviter</p>
