--- a/batiments.html
+++ b/batiments.html
@@ -5,9 +5,9 @@
 	
 		<title>Fertilia</title>
 		<meta charset = "utf-8"/>
-		<meta name="author" content="Léandre Leclerc" />
-		<meta name="author" content="Pablo Rebufie" />
-		<meta name="author" content="Ian Le Roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
 		<meta name = "description" content = "Accueil du site de présentation de Fertilia"/>
 		<meta name = "keywords" content = "Fertilia, Jeux"/>
 		<link rel="icon" href="images/logo.png" />
@@ -30,7 +30,7 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
-			<h1> Fertilia </h1>
+			<h1> Les bâtiments </h1>
 	</header>
 	<main>
 		<section>
