--- a/plantes.html
+++ b/plantes.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Fertilia</title>
 		<meta charset="utf-8"/>
-		<meta name="author" content="leandre leclerc" />
-		<meta name="author" content="Pablo Rebufie" />
-		<meta name="author" content="Ian Le Roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
 		<meta name="description" content="Informations sur les différents types de plantes de Fertilia"/>
 		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 		<link rel="stylesheet" href="styles.css"/>
@@ -26,8 +26,8 @@
 					<li> <a href="materiels.html"> Matériels </a> </li>
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>
-				<h1>LES PLANTES</h1>
 			</nav>
+			<h1>Les plantes</h1>
 		</header>
 		<main>
 			<p> Les plantes sont les ressources principales du jeu. Chaque plante a des attributs spécifiques. Ils sont définis par le temps de pousse, les besoins en nutriments, l'apport nutritif et le prix de vente </p>
