--- a/animaux.html
+++ b/animaux.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Fertilia</title>
 		<meta charset="utf-8"/>
-		<meta name="author" content="Léandre Leclerc" />
-		<meta name="author" content="Pablo Rebufie" />
-		<meta name="author" content="Ian Le Roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
+		<meta name="author" content="ian le-roux" />
 		<meta name="description" content="Informations sur les différents types d'animaux de Fertilia"/>
 		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 		<link rel="stylesheet" href="styles.css"/>
@@ -29,125 +29,128 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
-			<h1>Les animaux</h1>
+			<h1>Fertilia</h1>
 		</header>
 		<main>
 			<section>
-				<h2>Présentation</h2>
-				<p>
-					Les animaux sont des entités passives du jeu. Il y en a différents types, permettant d'obtenir différentes ressources. Chaque animal possède un niveau de rareté. Les animaux sont entreposés dans des enclos, et peuvent faire diverses actions, comme dormir, se reproduire, manger, mourir ou tomber malade.				
-				</p>
-			</section>
-			<section>
-				<h2>Les animaux communs</h2>
+				<h2>Les animaux</h2>
 				<article>
-					<h3>La Vache</h3>
+					<h3>Présentation</h3>
 					<p>
-						La vache est un animal commun. Le joueur pourra récolter du lait depuis les vaches. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de bœuf et du cuir. 			
+						Les animaux sont des entités passives du jeu. Il y en a différents types, permettant d'obtenir différentes ressources. Chaque animal possède un niveau de rareté. Les animaux sont entreposés dans des enclos, et peuvent faire diverses actions, comme dormir, se reproduire, manger, mourir ou tomber malade.				
 					</p>
-					<figure>
-					<img src="images/vache.png" alt="image d'une vache"/>
-					<figcaption>Une vache</figcaption>
-					</figure>
 				</article>
 				<article>
-					<h3>Le Cochon</h3>
-					<p>
-						Le cochon est un animal commun. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de porc. 			
-					</p>
-					<figure>
-					<img src="images/cochon.png" alt="image d'un cochon"/>
-					<figcaption>Un cochon</figcaption>
-					</figure>
+					<h3>Les animaux communs</h3>
+					<article>
+						<h4>La Vache</h4>
+						<p>
+							La vache est un animal commun. Le joueur pourra récolter du lait depuis les vaches. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de bœuf et du cuir. 			
+						</p>
+						<figure>
+						<img src="images/vache.png" alt="image d'une vache"/>
+						<figcaption>Une vache</figcaption>
+						</figure>
+					</article>
+					<article>
+						<h4>Le Cochon</h4>
+						<p>
+							Le cochon est un animal commun. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de porc. 			
+						</p>
+						<figure>
+						<img src="images/cochon.png" alt="image d'un cochon"/>
+						<figcaption>Un cochon</figcaption>
+						</figure>
+					</article>
+					<article>
+						<h4>La Poule</h4>
+						<p>
+							La poule est un animal commun. Le joueur pourra récolter des œufs depuis les poules. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir du poulet. 			
+						</p>
+						<figure>
+						<img src="images/poule.png" alt="image d'une poule"/>
+						<figcaption>Une poule</figcaption>
+						</figure>
+					</article>
+					<article>
+						<h4>Le mouton</h4>
+						<p>
+							Le mouton est un animal commun. Le joueur pourra récolter de la laine depuis les moutons. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de mouton. 			
+						</p>
+						<figure>
+						<img src="images/mouton.png" alt="image d'un mouton"/>
+						<figcaption>Un mouton</figcaption>
+						</figure>
+					</article>
 				</article>
 				<article>
-					<h3>La Poule</h3>
-					<p>
-						La poule est un animal commun. Le joueur pourra récolter des œufs depuis les poules. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir du poulet. 			
-					</p>
-					<figure>
-					<img src="images/poule.png" alt="image d'une poule"/>
-					<figcaption>Une poule</figcaption>
-					</figure>
+					<h3>Les animaux rares</h3>
+					<article>
+						<h4>La Chèvre</h4>
+						<p>
+							La chèvre est un animal rare. Le joueur pourra récolter du lait depuis les chèvres. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande et des cornes. 			
+						</p>
+						<figure>
+						<img src="images/chevre.png" alt="image d'une chèvre"/>
+						<figcaption>Une chèvre</figcaption>
+						</figure>
+					</article>
+					<article>
+						<h4>Le Canard</h4>
+						<p>
+							Le canard est un animal rare. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de canard. 			
+						</p>
+						<figure>
+						<img src="images/canard.png" alt="image d'un canard"/>
+						<figcaption>Un canard</figcaption>
+						</figure>
+					</article>
+					<article>
+						<h4>Le Lapin</h4>
+						<p>
+							Le Lapin est un animal rare. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande. Les lapins pourront également être revendus vivants. 			
+						</p>
+						<figure>
+						<img src="images/lapin.png" alt="image d'un lapin"/>
+						<figcaption>Un lapin</figcaption>
+						</figure>
+					</article>
 				</article>
 				<article>
-					<h3>Le mouton</h3>
-					<p>
-						Le mouton est un animal commun. Le joueur pourra récolter de la laine depuis les moutons. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de mouton. 			
-					</p>
-					<figure>
-					<img src="images/mouton.png" alt="image d'un mouton"/>
-					<figcaption>Un mouton</figcaption>
-					</figure>
-				</article>
-			</section>
-			<section>
-				<h2>Les animaux rares</h2>
-				<article>
-					<h3>La Chèvre</h3>
-					<p>
-						La chèvre est un animal rare. Le joueur pourra récolter du lait depuis les chèvres. Le joueur pourra également amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande et des cornes. 			
-					</p>
-					<figure>
-					<img src="images/chevre.png" alt="image d'une chèvre"/>
-					<figcaption>Une chèvre</figcaption>
-					</figure>
-				</article>
-				<article>
-					<h3>Le Canard</h3>
-					<p>
-						Le canard est un animal rare. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande de canard. 			
-					</p>
-					<figure>
-					<img src="images/canard.png" alt="image d'un canard"/>
-					<figcaption>Un canard</figcaption>
-					</figure>
+					<h3>Les animaux épiques</h3>
+					<article>
+						<h4>L'Autruche</h4>
+						<p>
+							La chèvre est un animal épique. Le joueur pourra récolter des œufs depuis les autruches.	
+						</p>
+						<figure>
+						<img src="images/autruche.png" alt="image d'une autruche"/>
+						<figcaption>Une autruche</figcaption>
+						</figure>
+					</article>
+					<article>
+						<h4>Le Crocodile</h4>
+						<p>
+							Le crocodile est un animal épique. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande et des écailles. 			
+						</p>
+						<figure>
+						<img src="images/crocodile.png" alt="image d'un crocodile"/>
+						<figcaption>Un crocodile</figcaption>
+						</figure>
+					</article>
 				</article>
 				<article>
-					<h3>Le Lapin</h3>
-					<p>
-						Le Lapin est un animal rare. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande. Les lapins pourront également être revendus vivants. 			
-					</p>
-					<figure>
-					<img src="images/lapin.png" alt="image d'un lapin"/>
-					<figcaption>Un lapin</figcaption>
-					</figure>
-				</article>
-			</section>
-			<section>
-				<h2>Les animaux épiques</h2>
-				<article>
-					<h3>L'Autruche</h3>
-					<p>
-						La chèvre est un animal épique. Le joueur pourra récolter des œufs depuis les autruches.	
-					</p>
-					<figure>
-					<img src="images/autruche.png" alt="image d'une autruche"/>
-					<figcaption>Une autruche</figcaption>
-					</figure>
-				</article>
-				<article>
-					<h3>Le Crocodile</h3>
-					<p>
-						Le crocodile est un animal épique. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande et des écailles. 			
-					</p>
-					<figure>
-					<img src="images/crocodile.png" alt="image d'un crocodile"/>
-					<figcaption>Un crocodile</figcaption>
-					</figure>
-				</article>
-			</section>
-			<section>
-				<h2>Les animaux légendaires</h2>
-				<article>
-					<h3>Le Dodo</h3>
-					<p>
-						Le dodo est un animal légendaire. Le joueur pourra récolter des œufs depuis les dodos. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande.
-					</p>
-					<figure>
-					<img src="images/dodo.png" alt="image d'un dodo"/>
-					<figcaption>Un dodo</figcaption>
-					</figure>
+					<h3>Les animaux légendaires</h3>
+					<article>
+						<h4>Le Dodo</h4>
+						<p>
+							Le dodo est un animal légendaire. Le joueur pourra récolter des œufs depuis les dodos. Le joueur pourra amener l'animal à l'abattoir, ce qui permettra d'obtenir de la viande.
+						</p>
+						<figure>
+						<img src="images/dodo.png" alt="image d'un dodo"/>
+						<figcaption>Un dodo</figcaption>
+						</figure>
+					</article>
 				</article>
 			</section>
 		</main>
