--- a/batiments.html
+++ b/batiments.html
@@ -30,20 +30,20 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
-			<h1> Les bâtiments </h1>
+			<h1>Fertilia</h1>
 	</header>
 	<main>
 		<section>
 			<h2>Bâtiments et stockage</h2>
 			<article>
 				<h3> Garage </h3>
-				<p>Les garages permettent d'entreposer des véhicules, qui prennent plus ou moins de place. Ils ont une capacité limité qui est de 4 véhicules.
-					Ils peuvent être achetés sur le marché en échange d'argent.
-				</p>
-				<figure>
-					<img src="images/garage.png" alt="image de garage du jeu">
-					<figcaption>Garage</figcaption>
-				</figure>
+					<p>Les garages permettent d'entreposer des véhicules, qui prennent plus ou moins de place. Ils ont une capacité limité qui est de 4 véhicules.
+						Ils peuvent être achetés sur le marché en échange d'argent.
+					</p>
+					<figure>
+						<img src="images/garage.png" alt="image de garage du jeu">
+						<figcaption>Garage</figcaption>
+					</figure>
 			</article> 		
 			<article>
 				<h3> Hangar </h3>
