--- a/aleas.html
+++ b/aleas.html
@@ -28,48 +28,52 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>
 			</nav>
-			<h1>Les différents types d'aléas</h1>
+			<h1>Fertilia</h1>
 		</header>
 		<main>
-			<p> Dans Fertilia, différents aléas souvent négatifs vont survenir de manière aléatoire dans la partie. Voici la liste des différentes catastrophes et aubaines et comment les éviter</p>
+			<span> Dans Fertilia, différents aléas souvent négatifs vont survenir de manière aléatoire dans la partie. Voici la liste des différentes catastrophes et aubaines et comment les éviter</span>
 			<section>
-				<h2> Les catastrophes </h2>
+				<h2>Les aléas</h2>
 				<article>
-					<h3>Les orages</h3>
-					<p>
-				 		Les orages surviennent rarement, mais quand il y en a un il faut à tout pris ranger tout type de matériel en métal (Tracteur, Moissoneuse-batteuse...) sous peine de le regretter fortement. Si par malheur il y a encore du matériel de sorti, alors la foudre va frapper, détruisant ce sur quoi elle tombe et déclenchant un feu qui va se propager et qui anéanti toutes graines/plantes sur son passage.
-					</p>
-				</article>
+					<h3> Les catastrophes </h3>
+					<article>
+						<h4>Les orages</h4>
+						<p>
+				 			Les orages surviennent rarement, mais quand il y en a un il faut à tout pris ranger tout type de matériel en métal (Tracteur, Moissoneuse-batteuse...) sous peine de le regretter fortement. Si par malheur il y a encore du matériel de sorti, alors la foudre va frapper, détruisant ce sur quoi elle tombe et déclenchant un feu qui va se propager et qui anéanti toutes graines/plantes sur son passage.
+						</p>
+					</article>
+					<article>
+						<h4>La sécheresse</h4>
+						<p>
+				 			En été, si les plantes ne sont pas bien irriguée, alors elles risques de prendre subitement feu à cause de la chaleur devenu trop importante. Le feu va se propager anéantir toutes graines/plantes sur son passage. Y compris celles qui était bien irriguées.
+						</p>
+					</article>
+					<article>
+						<h4>Le gel</h4>
+						<p>
+				 			Le gel se créé si les plantes et animaux n'ont pas un niveau de chaleur suffisant. Contrairement au feu, il ne se propage pas mais tue tous les animaux et plantes qui ne sont pas à l'abri du froid
+				 		</p>
+					</article>
+					<article>
+						<h4>Attaques d'animaux sauvages</h4>
+						<p>
+				 			Les attaques d'animaux sauvages ne cible que les animaux de la ferme, pas les plantes. Il y a trois type d'animaux: les renards, les loups et les lynx. Le renards se contente de tuer aléatoirement quelques poules. Le lynx tue aléatoirement quelques animaux commun ou rare. Et enfin, le loup tue aléatoirement n'importe quel animal exepté le crocodile. A savoir, les attaques d'animaux sauvages peuvent être arrêtées par le chien de garde.
+						</p>
+					</article>
+			</article>
+			<article>
+				<h3> Les aubaines </h3>
 				<article>
-				<h3>La sécheresse</h3>
-					<p>
-				 		En été, si les plantes ne sont pas bien irriguée, alors elles risques de prendre subitement feu à cause de la chaleur devenu trop importante. Le feu va se propager anéantir toutes graines/plantes sur son passage. Y compris celles qui était bien irriguées.
-					</p>
-				</article>
-				<article>
-				<h3>Le gel</h3>
-					<p>
-				 		Le gel se créé si les plantes et animaux n'ont pas un niveau de chaleur suffisant. Contrairement au feu, il ne se propage pas mais tue tous les animaux et plantes qui ne sont pas à l'abri du froid
-				</article>
-				<article>
-				<h3>Attaques d'animaux sauvages</h3>
-					<p>
-				 		Les attaques d'animaux sauvages ne cible que les animaux de la ferme, pas les plantes. Il y a trois type d'animaux: les renards, les loups et les lynx. Le renards se contente de tuer aléatoirement quelques poules. Le lynx tue aléatoirement quelques animaux commun ou rare. Et enfin, le loup tue aléatoirement n'importe quel animal exepté le crocodile. A savoir, les attaques d'animaux sauvages peuvent être arrêtées par le chien de garde.
-					</p>
-				</article>
-			</section>
-			<section>
-				<h2> Les aubaines </h2>
-				<article>
-					<h3>La pluie</h3>
+					<h4>La pluie</h4>
 					<p>
 				 		La pluie se produit occasionnellement et augmente la vitesse de pousse des plantes durant tout le temps de la pluie.
 					</p>
 				</article>
 				<article>
-				<h3>L'extraterrestre</h3>
+				<h4>L'extraterrestre</h4>
 					<p>
-				 		L'extraterrestre à une chance infime d'apparaitre. Si jamais il survol l'un de vos enclos, il enlèvera une vache et vous la redonnera quelques jours plus tard. Cependant la vache aura subis quelques modifications, notamment, elle aura une quantitée de lait infini permettant de traire en boucle cette vache.
+				 		L'extraterrestre à une chance infime d'apparaître. Si jamais il survol l'un de vos enclos, il enlèvera une vache et vous la redonnera quelques jours plus tard. Cependant la vache aura subis quelques modifications, notamment, elle aura une quantitée de lait infini permettant de traire en boucle cette vache.
+					</p>
 				</article>
 			</section>
 		</main>
