--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 			<nav>
 				<ul>
 					<li> <a href="#presentation" > Présentation </a> </li>
-					<li> <a href="#objectif" > Objectif du jeu </a> </li>
-					<li> <a href="#inspiration" > Inspiration </a> </li>
-					<li> <a href="#principale" > Principales entités </a> </li>
+					<li class="h3"> <a href="#objectif"> Objectif du jeu </a> </li>
+					<li class="h3"> <a href="#inspiration"> Inspiration </a> </li>
+					<li class="h3"> <a href="#principale"> Principales entités </a> </li>
 				</ul>		
 			</nav>
 			<section>
-				<h2 id="presentation">Présentation</h2>
+				<h2 >Présentation</h2>
 				<article>
 					<h3 id="objectif">Objectif du jeu</h3>
 					<p>Ce jeu est basé sur l'univers de la ferme. L'utilisateur peut utiliser ce petit Logiciel pour se divertir 
@@ -51,7 +51,7 @@
 					</p>
 				</article>
 				<article>
-					<h3 "id=inspiration">Inspiration</h3>
+					<h3 id="inspiration">Inspiration</h3>
 					<p>Le thème de ce jeu est motivé par une attrayance  envers les jeux de gestion tel que, Hay Day ou 
 						Satisfactory. L'aspect graphique d'un univers agricole nous a également attiré, il offre une grande liberté créative sur le 
 						plan esthétique. De plus l'étendue des fonctionnalités possibles nous permet de personnaliser notre projet à 
