--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 				</ul>		
 			</nav>
 			<section>
-				<h2 >Présentation</h2>
+				<h2 id="presentation" class="ancre">Présentation</h2>
 				<article>
-					<h3 id="objectif">Objectif du jeu</h3>
+					<h3 id="objectif" class="ancre">Objectif du jeu</h3>
 					<p>Ce jeu est basé sur l'univers de la ferme. L'utilisateur peut utiliser ce petit Logiciel pour se divertir 
 						et apprendre les bases de la gestion d'une ferme. En effet, ce jeu permettra à l'utilisateur de cultiver certaines plantes, 
 						s'occuper des animaux et d'acheter ou vendre des ressources. 
 					</p>
 				</article>
 				<article>
-					<h3 id="inspiration">Inspiration</h3>
+					<h3 id="inspiration" class="ancre">Inspiration</h3>
 					<p>Le thème de ce jeu est motivé par une attrayance  envers les jeux de gestion tel que, Hay Day ou 
 						Satisfactory. L'aspect graphique d'un univers agricole nous a également attiré, il offre une grande liberté créative sur le 
 						plan esthétique. De plus l'étendue des fonctionnalités possibles nous permet de personnaliser notre projet à 
@@ -59,7 +59,7 @@
 					</p>
 				</article>
 				<article>
-					<h3 id="principale">Les principales entités de ce jeu sont:</h3>
+					<h3 id="principale" class="ancre">Les principales entités de ce jeu sont:</h3>
 					<ul>
 						<li>
 							<h4><a href="plantes.html">Plantes</a></h4>
