--- a/plantes.html
+++ b/plantes.html
@@ -10,6 +10,14 @@
 		<meta name="keywords" content="Fertilia, Graines, Plantes"/>
 		<link rel="stylesheet" href="styles.css"/>
 		<link rel="icon" href="images/logo.png"/>
+		<style>h1{
+                background-color:    rgb(162, 113, 16,0.5);
+                width:160px;
+                border-radius: 5px;
+                text-align: center;
+                padding:5px;
+            }
+		</style>
 	</head>
 	
 	<body>
@@ -27,7 +35,7 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>
 			</nav>
-			<h1>Fertila</h1>
+			<h1>Fertilia</h1>
 		</header>
 		<main>
 			<section>
@@ -37,112 +45,132 @@
 					<h3> Les graines communes </h3>
 					<article>
 						<h4>Le blé</h4>
-							<p>
-				 			Les graines de blé prennent 1 minute pour pousser, et donnent entre 1 et 4 blé lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 4 graines de blé.
-							</p>
-							<figure>
-							<img src="images/ble.png" alt="image de ble"/>
-							<figcaption>Du blé</figcaption>
-							</figure>
+							<div class="placement">
+								<p>
+									Les graines de blé prennent 1 minute pour pousser, et donnent entre 1 et 4 blé lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 4 graines de blé.
+								</p>
+								<figure>
+								<img src="images/ble.png" alt="image de ble"/>
+								<figcaption>Du blé</figcaption>
+								</figure>
+							</div>
 					</article>
 					<article>
 						<h4>Les carottes</h4>
-						<p>
-				 			Les carottes prennent 5 minutes pour pousser, et donnent entre 1 et 4 carottes lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de carottes.
-						</p>
-						<figure>
-						<img src="images/carotte.png" alt="image d'une carotte"/>
-						<figcaption>Une carotte</figcaption>
-						</figure>
+						<div class="placement">
+							<p>
+								Les carottes prennent 5 minutes pour pousser, et donnent entre 1 et 4 carottes lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de carottes.
+							</p>
+							<figure>
+							<img src="images/carotte.png" alt="image d'une carotte"/>
+							<figcaption>Une carotte</figcaption>
+							</figure>
+						</div>
 					</article>
 					<article>
 						<h4>Les pommes de terres</h4>
-						<p>
-				 			Les pommes de terres prennent 20 minutes pour pousser, et donnent entre 2 et 3 pommes de terres lors de la récolte. Nous sommes également garantis de récupérer 2 graines de pommes de terres.
-						</p>
-						<figure>
-						<img src="images/patate.png" alt="image d'une patate"/>
-						<figcaption>Une patate</figcaption>
-						</figure>
+						<div class="placement">
+							<p>
+								Les pommes de terres prennent 20 minutes pour pousser, et donnent entre 2 et 3 pommes de terres lors de la récolte. Nous sommes également garantis de récupérer 2 graines de pommes de terres.
+							</p>
+							<figure>
+							<img src="images/patate.png" alt="image d'une patate"/>
+							<figcaption>Une patate</figcaption>
+							</figure>
+						</div>
 					</article>
 					<article>
 						<h4>Les aubergines</h4>
-						<p>
-				 			Les aubergines prennent 2 heures pour pousser, et donnent entre 1 et 2 aubergines lors de la récolte. Nous sommes également garantis de récupérer 2 graines d'aubergines.
-						</p>
-						<figure>
-						<img src="images/aubergine.png" alt="image d'une aubergine"/>
-						<figcaption>Une aubergine</figcaption>
-						</figure>
+						<div class="placement">
+							<p>
+								Les aubergines prennent 2 heures pour pousser, et donnent entre 1 et 2 aubergines lors de la récolte. Nous sommes également garantis de récupérer 2 graines d'aubergines.
+							</p>
+							<figure>
+							<img src="images/aubergine.png" alt="image d'une aubergine"/>
+							<figcaption>Une aubergine</figcaption>
+							</figure>
+						</div>
 					</article>
 				</article>
 				<article>
 					<h3> Les graines rares </h3>
 					<article>
 						<h4>Les betteraves</h4>
-						<p>
-				 			Les graines de betteraves prennent 45 minutes pour pousser, et donnent entre 1 et 4 betteraves lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de betteraves.
-						</p>
-						<figure>
+						<div class="placement">
+							<p>
+								Les graines de betteraves prennent 45 minutes pour pousser, et donnent entre 1 et 4 betteraves lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de betteraves.
+							</p>
+							<figure>
 							<img src="images/betterave.png" alt="image d'une betterave"/>
 							<figcaption>Une betterave</figcaption>
-						</figure>
+							</figure>
+						</div>
 					</article>
 					<article>
 						<h4>Le maïs</h4>
-							<p>
-				 				Le maïs prend 5 heures pour pousser, et donne entre 10 et 20 maïs lors de la récolte. Nous sommes également garantis de récupérer entre 0 et 10 graines de maïs.
-							</p>
-							<figure>
+							<div class="placement">
+								<p>
+									Le maïs prend 5 heures pour pousser, et donne entre 10 et 20 maïs lors de la récolte. Nous sommes également garantis de récupérer entre 0 et 10 graines de maïs.
+								</p>
+								<figure>
 								<img src="images/mais.png" alt="image de maïs"/>
 								<figcaption>Du maïs</figcaption>
-							</figure>
+								</figure>
+							</div>
 					</article>
 					<article>
 						<h4>La salade</h4>
-						<p>
-				 			La salade prend 12 heures pour pousser, et donne entre 1 et 2 salades lors de la récolte. Nous sommes également garantis de récupérer 2 graines de salades.
-						</p>
-						<figure>
+						<div class="placement">
+							<p>
+								La salade prend 12 heures pour pousser, et donne entre 1 et 2 salades lors de la récolte. Nous sommes également garantis de récupérer 2 graines de salades.
+							</p>
+							<figure>
 							<img src="images/salade.png" alt="image d'une salade"/>
 							<figcaption>Une salade</figcaption>
-						</figure>
+							</figure>
+						</div>
 					</article>
 				</article>
 				<article>
 					<h3> Les graines épiques </h3>
 					<article>
 						<h4>Les tomates</h4>
-						<p>
-				 			Les graines de tomates prennent 1 heures pour pousser, et donnent entre 4 et 6 tomates lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de tomates.
-						</p>
-						<figure>
+						<div class="placement">
+							<p>
+								Les graines de tomates prennent 1 heures pour pousser, et donnent entre 4 et 6 tomates lors de la récolte. Nous sommes également garantis de récupérer entre 2 et 3 graines de tomates.
+							</p>
+							<figure>
 							<img src="images/tomate.png" alt="image d'une tomate"/>
 							<figcaption>Une tomate</figcaption>
-						</figure>
+							</figure>
+						</div>
 					</article>
 					<article>
 						<h4>Les choux</h4>
-						<p>
-				 			Les choux prennent 72 heures pour pousser, et donnent 1 choux lors de la récolte. Nous sommes également garantis de récupérer entre 1 graine de choux.
-						</p>
-						<figure>
+						<div class="placement">
+							<p>
+								Les choux prennent 72 heures pour pousser, et donnent 1 choux lors de la récolte. Nous sommes également garantis de récupérer entre 1 graine de choux.
+							</p>
+							<figure>
 							<img src="images/chou.png" alt="image d'un chou"/>
 							<figcaption>Un chou</figcaption>
-						</figure>
+							</figure>
+						</div>
 					</article>
 				</article>
 				<article>
-					<h3> Les graines légendaires </h">
+					<h3> Les graines légendaires </h3>
 					<article>
 						<h4>Les rutabagas</h4>
-						<p>
-				 			Les graines de rutabagas prennent 24 heures pour pousser, et donnent 1 rutabaga lors de la récolte. Nous sommes également garantis de récupérer 1 graine de rutabaga.
-						</p>
-						<figure>
+						<div class="placement">
+							<p>
+								Les graines de rutabagas prennent 24 heures pour pousser, et donnent 1 rutabaga lors de la récolte. Nous sommes également garantis de récupérer 1 graine de rutabaga.
+							</p>
+							<figure>
 							<img src="images/rutabaga.png" alt="image d'un rutabaga"/>
 							<figcaption>Un rutabaga</figcaption>
-						</figure>
+							</figure>
+						</div>
 					</article>
 				</article>
 			</section>
