--- a/batiments.html
+++ b/batiments.html
@@ -38,7 +38,7 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
-			<h1>Fertilia</h1>
+			<h1 id="Haut">Fertilia</h1>
 	</header>
 	<main>
 		<section>
@@ -50,7 +50,6 @@
 					</p>
 					<figure>
 						<img src="images/garage.png" alt="image de garage du jeu">
-						<figcaption>Garage</figcaption>
 					</figure>
 			</article> 		
 			<article>
@@ -60,7 +59,6 @@
 				</p>
 				<figure>
 					<img src="images/hangar.png" alt="image du hangar">
-					<figcaption>Hangar</figcaption>
 				</figure>
 			</article>
 			<article>
@@ -70,7 +68,6 @@
 				</p>
 				<figure>
 					<img src="images/entrepot.png" alt="image du hangar">
-					<figcaption> Hangar </figcaption>
 				</figure>
 			</article>
 			<article>
@@ -80,7 +77,6 @@
 				</p>
 				<figure>
 					<img src="images/enclos.png" alt="image de l'enclos">
-					<figcaption> Enclos </figcaption>
 				</figure>
 			</article>
 			<article>
@@ -90,7 +86,6 @@
 				</p>	
 				<figure>
 					<img src="images/frigo.png" alt="image de l'entrepot frigorifique">
-					<figcaption> Entrepôt frigorifique </figcaption>
 				</figure>
 			</article>
 			<article>
@@ -98,7 +93,6 @@
 				<p> Les abattoirs permettent de tuer les animaux et de récupérer les ressources qui leurs sont attribuées </p>
 				<figure>
 					<img src="images/abattoir.png" alt="image de l'abattoir">
-					<figcaption> Abattoir </figcaption>
 				</figure>
 			</article>	
 		</section>
@@ -108,6 +102,11 @@
 			<span>
 				Fait par Ian Le Roux, Léandre Leclerc et Pablo Rebufie, pour le cours de Développement Web de CY Cergy Paris Université			
 			</span>
+			<nav>
+				<ul class="suppression">
+					<li> <a href="#Haut" > Haut de page </a> </li>
+				</ul>		
+			</nav>
 	</footer>
 </body>
 </html>
