--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
-			<h1> Fertilia </h1>
+			<h1 id="Haut"> Fertilia </h1>
 		</header>
 		<main>
 			<nav>
@@ -68,31 +68,33 @@
 				</article>
 				<article>
 					<h3 id="principale" class="ancre">Les principales entités de ce jeu sont:</h3>
-					<ul>
-						<li>
-							<h4><a href="plantes.html">Plantes</a></h4>
-							<p> Les plantes sont les ressources principales du jeu. Chaque plante a des attributs spécifiques. Ils sont 
-								définis par le temps de pousse, les besoins en nutriments, l'apport nutritif et le prix de vente.
-							</p>
-						</li>
-						<li>
-							<h4><a href="animaux.html">Animaux</a></h4>
-							<p>Les animaux sont des entités passives de notre jeu. Ils seront placés dans différents enclos. Ils 
-								peuvent dormir, se reproduire, manger, mourir, tomber malade. Chaque animal peut apporter différentes 
-								ressources.
-							</p>
-						</li>
-						<li>
-							<h4><a href="materiels.html">Matériels</a></h4>
-							<p>Pour assurer une gestion réaliste du jeu, des matériels sont nécessaires. Parmi eux il y a les 
-								engins chacun possèdent une barre de vie qui peut être restaurer grâce au mécanicien.
-							</p>
-						</li>
-						<li>
-							<h4><a href="batiments.html">Bâtiments</a></h4>
-							<p>Les bâtiments sont essentiels au stockage des entités. Il y a différents bâtiments selon les entités.</p>
-						</li>
-					</ul>					
+					<nav>
+						<ul class="suppression">
+							<li>
+								<h4><a href="plantes.html">Plantes</a></h4>
+								<p> Les plantes sont les ressources principales du jeu. Chaque plante a des attributs spécifiques. Ils sont 
+									définis par le temps de pousse, les besoins en nutriments, l'apport nutritif et le prix de vente.
+								</p>
+							</li>
+							<li>
+								<h4><a href="animaux.html">Animaux</a></h4>
+								<p>Les animaux sont des entités passives de notre jeu. Ils seront placés dans différents enclos. Ils 
+									peuvent dormir, se reproduire, manger, mourir, tomber malade. Chaque animal peut apporter différentes 
+									ressources.
+								</p>
+							</li>
+							<li>
+								<h4><a href="materiels.html">Matériels</a></h4>
+								<p>Pour assurer une gestion réaliste du jeu, des matériels sont nécessaires. Parmi eux il y a les 
+									engins chacun possèdent une barre de vie qui peut être restaurer grâce au mécanicien.
+								</p>
+							</li>
+							<li>
+								<h4><a href="batiments.html">Bâtiments</a></h4>
+								<p>Les bâtiments sont essentiels au stockage des entités. Il y a différents bâtiments selon les entités.</p>
+							</li>
+						</ul>	
+					</nav>
 				</article>
 			</section>
 		</main>
@@ -101,6 +103,11 @@
 			<span>
 				Fait par Ian Le Roux, Léandre Leclerc et Pablo Rebufie, pour le cours de Développement Web de CY Cergy Paris Université			
 			</span>
+			<nav>
+				<ul class="suppression">
+					<li> <a href="#Haut" > Haut de page </a> </li>
+				</ul>		
+			</nav>
 		</footer>
 	</body>
 </html>
