--- a/animaux.html
+++ b/animaux.html
@@ -37,7 +37,7 @@
 					<li> <a href="aleas.html"> Aléas </a> </li>
 				</ul>		
 			</nav>
-			<h1>Fertilia</h1>
+			<h1 id="Haut">Fertilia</h1>
 		</header>
 		<main>
 			<section>
@@ -57,6 +57,7 @@
 						</p>
 						<figure>
 						<img src="images/vache.png" alt="image d'une vache"/>
+						<figcaption>Une vache</figcaption>
 						</figure>
 					</article>
 					<article>
@@ -66,6 +67,7 @@
 						</p>
 						<figure>
 						<img src="images/cochon.png" alt="image d'un cochon"/>
+						<figcaption>Un cochon</figcaption>
 						</figure>
 					</article>
 					<article>
@@ -75,6 +77,7 @@
 						</p>
 						<figure>
 						<img src="images/poule.png" alt="image d'une poule"/>
+						<figcaption>Une poule</figcaption>
 						</figure>
 					</article>
 					<article>
@@ -84,6 +87,7 @@
 						</p>
 						<figure>
 						<img src="images/mouton.png" alt="image d'un mouton"/>
+						<figcaption>Un mouton</figcaption>
 						</figure>
 					</article>
 				</article>
@@ -96,6 +100,7 @@
 						</p>
 						<figure>
 						<img src="images/chevre.png" alt="image d'une chèvre"/>
+						<figcaption>Une chèvre</figcaption>
 						</figure>
 					</article>
 					<article>
@@ -105,6 +110,7 @@
 						</p>
 						<figure>
 						<img src="images/canard.png" alt="image d'un canard"/>
+						<figcaption>Un canard</figcaption>
 						</figure>
 					</article>
 					<article>
@@ -114,6 +120,7 @@
 						</p>
 						<figure>
 						<img src="images/lapin.png" alt="image d'un lapin"/>
+						<figcaption>Un lapin</figcaption>
 						</figure>
 					</article>
 				</article>
@@ -126,6 +133,7 @@
 						</p>
 						<figure>
 						<img src="images/autruche.png" alt="image d'une autruche"/>
+						<figcaption>Une autruche</figcaption>
 						</figure>
 					</article>
 					<article>
@@ -135,6 +143,7 @@
 						</p>
 						<figure>
 						<img src="images/crocodile.png" alt="image d'un crocodile"/>
+						<figcaption>Un crocodile</figcaption>
 						</figure>
 					</article>
 				</article>
@@ -147,6 +156,7 @@
 						</p>
 						<figure>
 						<img src="images/dodo.png" alt="image d'un dodo"/>
+						<figcaption>Un dodo</figcaption>
 						</figure>
 					</article>
 				</article>
@@ -157,6 +167,11 @@
 			<span>
 				Fait par Ian Le Roux, Léandre Leclerc et Pablo Rebufie, pour le cours de Développement Web de CY Cergy Paris Université			
 			</span>
+			<nav>
+				<ul class="suppression">
+					<li> <a href="#Haut" > Haut de page </a> </li>
+				</ul>		
+			</nav>
 		</footer>
 	</body>
 </html>
