--- a/batiments.html
+++ b/batiments.html
@@ -49,7 +49,7 @@
 						Ils peuvent être achetés sur le marché en échange d'argent.
 					</p>
 					<figure>
-						<img src="images/garage.png" alt="image de garage du jeu">
+						<img src="images/garage.png" alt="image de garage du jeu"/>
 					</figure>
 			</article> 		
 			<article>
@@ -58,7 +58,7 @@
 					Ils prennent plus de place que les garages sur la map mais reste quand même plus avantageux que les garages.
 				</p>
 				<figure>
-					<img src="images/hangar.png" alt="image du hangar">
+					<img src="images/hangar.png" alt="image du hangar"/>
 				</figure>
 			</article>
 			<article>
@@ -67,7 +67,7 @@
 					même taille, soit conserver des fruits. Comme les maïs et les blés ensembles.
 				</p>
 				<figure>
-					<img src="images/entrepot.png" alt="image du hangar">
+					<img src="images/entrepot.png" alt="image du hangar"/>
 				</figure>
 			</article>
 			<article>
@@ -76,7 +76,7 @@
 				de place.
 				</p>
 				<figure>
-					<img src="images/enclos.png" alt="image de l'enclos">
+					<img src="images/enclos.png" alt="image de l'enclos"/>
 				</figure>
 			</article>
 			<article>
@@ -85,14 +85,14 @@
 					 leur propre viande. Les entrepôts frigorifiques sont alors essentiels pour la gestion des ressources animalières.
 				</p>	
 				<figure>
-					<img src="images/frigo.png" alt="image de l'entrepot frigorifique">
+					<img src="images/frigo.png" alt="image de l'entrepot frigorifique"/>
 				</figure>
 			</article>
 			<article>
 				<h3> Abattoir </h3>
 				<p> Les abattoirs permettent de tuer les animaux et de récupérer les ressources qui leurs sont attribuées </p>
 				<figure>
-					<img src="images/abattoir.png" alt="image de l'abattoir">
+					<img src="images/abattoir.png" alt="image de l'abattoir"/>
 				</figure>
 			</article>	
 		</section>
