--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<section>
 				<h2 id="presentation" class="ancre">Présentation</h2>
 				<article>
-					<h3 id="objectif" class="ancre">Objectif du jeu</h3>
+					<h3 id="objectif" class="ancre" style="color:#8ab446;">Objectif du jeu</h3>
 					<p>Ce jeu est basé sur l'univers de la ferme. L'utilisateur peut utiliser ce petit Logiciel pour se divertir 
 						et apprendre les bases de la gestion d'une ferme. En effet, ce jeu permettra à l'utilisateur de cultiver certaines plantes, 
 						s'occuper des animaux et d'acheter ou vendre des ressources. 
